Updated link to file

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <body>
 <h1>Hello</h1>
 <p>GitHub Pages</p>
-<script src="https://embed.github.com/view/geojson/<username>/<repo>/<ref>/<path_to_file>"></script>
+<script src="https://embed.github.com/view/geojson/katelenzer/katelenzer.github.io
+/master/3.geojson"</script>
 </body>
 </html>
