--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
 <h1>Hello</h1>
 <p>GitHub Pages</p>
-<script src="https://embed.github.com/view/geojson/katelenzer/katelenzer.github.io/master/3.geojson"</script>
+<script src="https://embed.github.com/view/geojson/katelenzer/katelenzer.github.io/master/3.geojson"></script>
 </body>
 </html>
