--- a/index.html
+++ b/index.html
@@ -1,18 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Leaflet</title>
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.3.1/leaflet.css" />
-    <script src="http://cdn.leafletjs.com/leaflet-0.3.1/leaflet.js"></script>
-    <script src="http://maps.google.com/maps/api/js?v=3.2&sensor=false"></script>
-    <script src="http://matchingnotes.com/javascripts/leaflet-google.js"></script>
-  </head>
-  <body>
-    <div style="width:900px; height:900px" id="map"></div>
-    <script type='text/javascript'>
-      var map = new L.Map('map', {center: new L.LatLng(35, -106), zoom: 12});
-      var googleLayer = new L.Google('ROADMAP');
-      map.addLayer(googleLayer);
-    </script>
-  </body>
+<body>
+<h1>Hello</h1>
+<p>GitHub Pages</p>
+<iframe width='100%' height='500px' frameBorder='0' src='https://a.tiles.mapbox.com/v4/klenzer.nnbc34o8/attribution,zoompan,zoomwheel,geocoder,share.html?access_token=pk.eyJ1Ijoia2xlbnplciIsImEiOiJjaWZvYW43amZoNHVucnlseHZxeDMyM2YwIn0.ExI_277PRKLNqfaSY3N_YQ'>
+</iframe>
+</body>
 </html>
